# ESP32C3_Studio_LED

./: .gitignore  README.md
Software/LVGL_UI/export/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp.c  ui_comp_batterybar.c  ui_comp_batterybar.h  ui_comp_hook.c  ui_comp_nextbtn.c  ui_comp_nextbtn.h  ui_effects.c  ui_events.h  ui_img_0_png.c  ui_img_25_png.c  ui_img_75_png.c  ui_img_bluetooth_connected_png.c  ui_img_charge_png.c  ui_main.c  ui_solidColor.c
Software/Studio_LED_ZephyrRTOS/: CMakeLists.txt  prj.conf  zephyr-linux.code-workspace
Software/Studio_LED_ZephyrRTOS/apps/BLE/: CMakeLists.txt  ble.cpp  ble.h  ble_services.cpp  ble_services.h
Software/Studio_LED_ZephyrRTOS/apps/LED_effects/: CMakeLists.txt  LED_effect_1.cpp  LED_effect_1.h  LED_effect_2.cpp  LED_effect_3.cpp  LED_effect_3.h  LED_effect_4.cpp  LED_effect_4.h  LED_effect_5.cpp  LED_effect_5.h  LED_effect_6.cpp  LED_effect_6.h
Software/Studio_LED_ZephyrRTOS/apps/battery_monitoring/: CMakeLists.txt  battery_monitoring.cpp  battery_monitoring.h
Software/Studio_LED_ZephyrRTOS/apps/cooling_system/: CMakeLists.txt  cooling_system.cpp  cooling_system.h
Software/Studio_LED_ZephyrRTOS/apps/digital_clock/: CMakeLists.txt  digital_clock.cpp
Software/Studio_LED_ZephyrRTOS/apps/ui/: CMakeLists.txt  usr_ui.cpp  usr_ui.h
Software/Studio_LED_ZephyrRTOS/boards/: ESP32C3_Studio_LED.overlay
Software/Studio_LED_ZephyrRTOS/modules/LED_matrix/: LED_effect_1.cpp  LED_effect_1.h  LED_effect_2.h  LED_effect_3.cpp  LED_effect_4.cpp  LED_effect_4.h  (+6 more)
Software/Studio_LED_ZephyrRTOS/src/: main.c  main.cpp
(+47 files in other folders)
